<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="1"
        android:title="@string/sort_order"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_action_sort_asc"
                android:title="@string/alphabet_asc" />

            <item
                android:id="@+id/menu_action_sort_desc"
                android:title="@string/alphabet_desc" />
        </menu>
    </item>

    <item
        android:orderInCategory="2"
        android:title="@string/grid_count"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/two"
                android:title="@string/two" />

            <item
                android:id="@+id/three"
                android:title="@string/three" />

            <item
                android:id="@+id/four"
                android:title="@string/four" />
        </menu>
    </item>
</menu>