<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_order"
        android:orderInCategory="1"
        android:title="@string/sort_order"
        app:showAsAction="never" />

    <item
        android:orderInCategory="4"
        android:title="@string/columns"
        app:showAsAction="never">
        <menu>
            <item android:title="@string/portrait">

                <menu>
                    <item
                        android:id="@+id/two"
                        android:title="@string/two" />

                    <item
                        android:id="@+id/three"
                        android:title="@string/three" />

                    <item
                        android:id="@+id/four"
                        android:title="@string/four" />

                </menu>
            </item>

            <item android:title="@string/landscape">
                <menu>
                    <item
                        android:id="@+id/l_four"
                        android:title="@string/four" />

                    <item
                        android:id="@+id/l_five"
                        android:title="@string/five" />

                    <item
                        android:id="@+id/l_six"
                        android:title="@string/six" />

                </menu>
            </item>
        </menu>
    </item>
</menu>