<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="16dp"
            android:text="@string/laf_category_theme"
            android:textAppearance="@style/TextViewOverline"
            android:textColor="?primaryColor" />

        <com.hardcodecoder.pulsemusic.views.SettingsCategoryItemView
            android:id="@+id/laf_select_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:textStyle="normal"
            app:settingItemDesaturatedColorsInDarkMode="false"
            app:settingItemIcon="@drawable/ic_theme_palette"
            app:settingItemIconBackgroundColor="?windowBackgroundColor"
            app:settingItemIconColor="?unFocusedColor"
            app:settingItemText="@string/laf_category_select_dark_theme_desc"
            app:settingItemTitle="@string/laf_category_select_dark_theme"
            app:settingToggleableItemEnabled="true" />

        <com.hardcodecoder.pulsemusic.views.SettingsToggleableItem
            android:id="@+id/laf_enable_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingToggleableItemText="@string/laf_category_enable_dark_mode_text"
            app:settingToggleableItemTitle="@string/laf_category_enable_dark_mode_title" />

        <com.hardcodecoder.pulsemusic.views.SettingsToggleableItem
            android:id="@+id/laf_enable_auto_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingToggleableItemText="@string/laf_category_enable_auto_mode_text"
            app:settingToggleableItemTitle="@string/laf_category_enable_auto_mode_title" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="32dp"
            android:text="@string/laf_category_colors"
            android:textAppearance="@style/TextViewOverline"
            android:textColor="?primaryColor" />

        <com.hardcodecoder.pulsemusic.views.SettingsCategoryItemView
            android:id="@+id/laf_select_accent_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:textStyle="normal"
            app:settingItemDesaturatedColorsInDarkMode="false"
            app:settingItemIcon="@drawable/ic_info"
            app:settingItemIconBackgroundColor="?windowBackgroundColor"
            app:settingItemIconColor="?unFocusedColor"
            app:settingItemText="@string/laf_category_select_color_desc"
            app:settingItemTitle="@string/laf_category_select_color"
            app:settingToggleableItemEnabled="true" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>