<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/overlay_color_bck_drawable"
    android:gravity="center">

    <ImageView
        style="@style/ButtonStyle24"
        android:contentDescription="@string/iv_content_desc"
        android:src="@drawable/ic_playlist"
        android:tint="?unFocusedColor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/playlist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/playlist_current_queue"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <ImageView
        android:id="@+id/edit_btn"
        style="@style/ButtonStyle24"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/iv_btn_action_description"
        android:src="@drawable/ic_round_edit"
        android:visibility="visible" />
</LinearLayout>